Corrected swagger to AWS VM Service
