# aws-vm-service/securitygroup.py
@@ -25,11 +25,11 @@ def loadOrCreateSecurityGroupWithAuthorization():
     content = request.get_json()
 
     if content and content['groupName']:
-        try:
-            groupId = json.loads(requests.post(securitygroupURL + '/securityGroup',json=content).text)
-            if groupId:
-                return make_response(jsonify(groupId))
-        except Exception:
-            pass
+        #try:
+        groupId = json.loads(requests.post(securitygroupURL + '/securityGroup',json=content).text)
+        if groupId:
+            return make_response(jsonify(groupId))
+        #except Exception:
+         #   pass
 
     return make_response(jsonify(groupId=None))
